# ShareusBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: rbac.json
plugins/: common.py
plugins/archive/: __init__.py  handlers.py
plugins/blacklist/: __init__.py  handlers.py
plugins/group_admin/: __init__.py  handlers.py
plugins/query/: __init__.py  handlers.py  parser.py  rate_limiter.py
plugins/scheduler/: __init__.py  handlers.py
scripts/: docker-deploy.sh  entrypoint.sh  ssh-deploy.sh  wait_for_napcat.py
shared/: __init__.py  config.py  database.py  redis_client.py
shared/models/: __init__.py  archived_file.py  base.py  black_list.py  nonsense.py  q_member.py  query_log.py
shared/services/: __init__.py  alist_service.py  archive_service.py  blacklist_service.py  file_processor_service.py  meilisearch_service.py  nonsense_service.py  q_member_service.py  qq_info_service.py  qq_monitor_service.py  query_log_service.py  r2_service.py  short_url_service.py
shared/utils/: excel_export.py  pdf_watermark.py  text_watermark.py  zip_watermark.py
